# iot-safe-middleware

./: .gitignore  README.md  build.sh  run.sh  setenv.sh  test.sh
cpp/c4amiddleware/: CMakeLists.txt
cpp/c4amiddleware/cpp_wrapper/: CMakeLists.txt
cpp/c4amiddleware/cpp_wrapper/inc/: sim-access-util.h  wrappers.h
cpp/c4amiddleware/cpp_wrapper/src/: openssl-util.cpp  sim-access-util.cpp  wrappers.cpp
cpp/iot-safe-middleware/examples/jwtexample/src/: jwtexample.cpp  sim-access-util.cpp
cpp/iot-safe-middleware/examples/simpledemo/src/: simpledemo.cpp
cpp/iot-safe-middleware/iotsafelib/: CMakeLists.txt
cpp/iot-safe-middleware/iotsafelib/common/: CMakeLists.txt
cpp/iot-safe-middleware/iotsafelib/common/inc/: Applet.h  ROT.h  SEInterface.h
cpp/iot-safe-middleware/iotsafelib/common/src/: ROT.cpp
cpp/iot-safe-middleware/iotsafelib/general/: CMakeLists.txt
cpp/iot-safe-middleware/iotsafelib/general/inc/: common.h
cpp/iot-safe-middleware/iotsafelib/general/src/: common.cpp
cpp/iot-safe-middleware/iotsafelib/platform/modem/: CMakeLists.txt
cpp/iot-safe-middleware/iotsafelib/platform/modem/src/: ATInterface.cpp  GenericModem.cpp  LSerial.cpp
golang/src/tlsdemo/: go.mod  go.sum
golang/src/tlsdemo/cmd/: cmd_handler.go  commands.go  configuration.go  func.go  main.go
golang/src/tlsdemo/common/: crypto_functions.go  file_utils.go  general_utils.go
python/: demo.py  iot_mw.py  utils.py
